# codeindex

./: .editorconfig  .gitignore  BRANCH_STATUS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION_UPDATE.md  CLEANUP_AND_NEXT_STEPS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  EPIC7_DESIGN_PHILOSOPHY_RETHINK.md  EPIC7_GREEN_COMPLETE.md  EPIC7_JAVA_ROADMAP.md  EPIC7_PERFORMANCE_CORRECTION.md  EPIC7_REFACTOR_COMPLETE.md  EPIC7_STORY_7.1.2-7.1.4_DESIGN.md  EPIC7_STORY_7.1.4_PERFORMANCE_RETHINK.md  FOR_LOOMGRAPH.md  GIT_COMMIT_GUIDE.md  IMPROVEMENT_PLAN.md  LICENSE  Makefile  PACKAGE_NAMING.md  PROJECT_INDEX.json  PROJECT_INDEX.md  PROJECT_INDEX_KISS.md  PROJECT_INDEX_TEST.md  PROJECT_SYMBOLS.md  PYPI_QUICKSTART.md  README.md  README_AI.md  README_zh.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.12.0.md  RELEASE_NOTES_v0.12.1.md  RELEASE_NOTES_v0.14.0.md  RELEASE_NOTES_v0.15.0.md  RELEASE_NOTES_v0.17.0.md  RELEASE_NOTES_v0.17.2.md  (+18 more)
.github/ISSUE_TEMPLATE/: bug.md  config.yml  enhancement.md  epic.md  feature.md
.github/workflows/: ci.yml  publish.yml
.serena/: project.yml
.serena/memories/: design_philosophy.md  development_workflow.md  project_overview.md  release_automation.md  suggested_commands.md
docs/: DOCS_REORGANIZATION_PLAN.md  README.md  epic2-validation-report.md  project-cleanup-plan.md
docs/architecture/: design-philosophy.md
docs/development/: QUICK_START_RELEASE.md  cleanup-complete-summary.md  git-hooks-async-mode.md  git-hooks-design-analysis.md  git-hooks-venv-fix-2026-02-07.md  gitflow-workflow.md  github-issue-quick-reference.md  issue-cleanup-log.md  multi-language-support-workflow.md  path-fix-impact-analysis-2026-02-08.md  phase1-cleanup-report.md  phase2-cleanup-report.md  phase3-cleanup-report.md  pypi-release-guide.md  release-workflow.md  requirements-workflow.md  root-directory-analysis.md  setup.md  test-architecture.md  windows-bugs-analysis-2026-02-08.md  windows-encoding-fix-summary.md  windows-path-analysis-2026-02-08.md  windows-path-fix-summary-2026-02-08.md
docs/evaluation/: README.md  epic12-story12.1-validation.md  epic23-slock-app-validation.md  epic23-tech-debt-validation.md  framework.md  loomgraph-efficiency-comparison.md  php-project-validation.md
docs/guides/: advanced-usage.md  claude-code-integration.md  configuration-changelog.md  configuration.md  contributing.md  docstring-extraction.md  getting-started.md  git-hooks-integration.md  json-output-integration.md  loomgraph-integration.md  migration-v0.4.md  migration-v0.6.md
docs/migration/: epic18_retrospective.md  python_migration_report.md  python_test_analysis.md
docs/planning/: IMPLEMENTATION_GUIDE.md  PLANNING_COMPLETE.md  README.md  ROADMAP-update-proposal.md  ROADMAP.md  TODO_EPIC18.md  day5-documentation-summary.md  day6-git-hooks-completion.md  development-roadmap-2026-q1-q2.md  documentation-refactor-plan.md  epic6-framework-routes.md  epic6-multiagent-orchestrator.md  epic7-java-support.md  epic9-docstring-extraction.md  executive-summary.md  improvement-proposals.md  improvement-roadmap.md  phase1-agile-plan.md  phase1-quick-start.md  sprint1-epic6-execution.md  sprint1-implementation-plan.md  sprint1-week1-review.md  story-4.3-cli-module-split.md
docs/releases/: README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.5.0-beta1.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.9.0.md
examples/: .codeindex.yaml  CLAUDE.md.php-project  CLAUDE.md.template  README.md  README_AI.md  ai-integration-guide.md  loomgraph_output.json  loomgraph_php_output.json  loomgraph_sample.php  loomgraph_sample.py  parse_integration_example.sh  print_env.py
examples/frameworks/: README_AI.md
hooks/: README.md
hooks/templates/: post-commit-update-logic.sh  post-commit-v4
reports/: swift-objc-support-analysis.md  swift-poc-summary.md  tech-debt-codeindex-v2.md  tech-debt-loomgraph-v2.md  tech-debt-loomgraph.md  workflow-comparison.md
scripts/: README.md  README_AI.md  bump_version.sh  check_docs_release.py  check_version_consistency.py  close-epic9-issues.sh  diagnose_ai_failures.py  release.sh  test_hook_e2e.sh  validate_php_project.py  validate_real_projects.py
scripts/hooks/: pre-push
scripts/legacy/: README.md
scripts/validation/: projects.yaml
skills/: README.md  create.sh  install.sh
src/: README_AI.md
src/codeindex/: README_AI.md  __init__.py  adaptive_config.py  cli.py  (+42 more)
test_generator/: generator.py
tests/: README_AI.md  __init__.py  conftest.py  test_adaptive_config.py  test_adaptive_selector.py  test_ai_helper.py  test_backward_compatibility.py  test_call_integration.py  test_claude_md.py  test_claude_md_injection.py  test_cli_debt_scan.py  test_cli_docstring_options.py  test_cli_hooks.py  test_cli_json.py  test_cli_parse.py  test_cli_scan_defaults_bdd.py  test_cli_tech_debt.py  test_config_adaptive.py  test_dataclass_structure.py  test_directory_tree.py  test_docstring_config.py  test_docstring_processor.py  test_enricher.py  test_enricher_integration.py  test_error_handling.py  test_file_classifier.py  test_help_system_bdd.py  test_hook_post_commit.py  test_hooks.py  test_hooks_config.py  test_hooks_integration.py  test_init_wizard_bdd.py  test_integration_swift_objc.py  test_java_annotations.py  test_java_calls.py  test_java_error_recovery.py  test_java_generic_bounds.py  test_java_inheritance.py  test_java_lambda.py  test_java_module.py  (+65 more)
(+201 files in other folders)
