[project]
name = "ai-codeindex"
version = "0.17.2"
description = "AI-native code indexing tool for large codebases"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "codeindex contributors", email = "noreply@github.com"}
]
maintainers = [
    {name = "codeindex team", email = "noreply@github.com"}
]
keywords = ["ai", "code", "index", "llm", "documentation", "tree-sitter", "code-analysis"]
urls = {Homepage = "https://github.com/dreamlx/codeindex", Documentation = "https://github.com/dreamlx/codeindex", Repository = "https://github.com/dreamlx/codeindex", Changelog = "https://github.com/dreamlx/codeindex/blob/master/CHANGELOG.md"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tree-sitter>=0.21",
]

[project.optional-dependencies]
# Language-specific parsers (install only what you need)
python = ["tree-sitter-python>=0.21"]
php = ["tree-sitter-php>=0.23"]
java = ["tree-sitter-java>=0.23.0"]

# Convenience: all languages
all = [
    "tree-sitter-python>=0.21",
    "tree-sitter-php>=0.23",
    "tree-sitter-java>=0.23.0",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-bdd>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
codeindex = "codeindex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codeindex"]

[tool.ruff]
line-length = 120  # Modern wide screens (updated from 100)
target-version = "py310"
extend-exclude = [
    "tests/fixtures/cli_parse/broken.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["examples"]
